# gromo

./: .gitignore  .pre-commit-config.yaml  CNAME  LICENCE.md  README.html  README.md  api.html  example_gromo.config  genindex.html  gromo.config  growingmodule.html  index.html  lineargrowingmodule.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  tech_notes.html  tools.html  whats_new.html
.github/workflows/: doc.yml  tests.yml  whats-new.yml
_downloads/7031ea2c64cf5258aa3424c20fbb0e4a/: plot_growing_graph_tutorial.ipynb
_downloads/7d13a297f4e0f5670792ab2433d6e7a9/: plot_mlp_run.ipynb
_downloads/8a90e3a12e6c28e6701ab553191db473/: plot_growing_container_tutorial.ipynb
_downloads/b2626867e02b096f58618047dea3bbd7/: plot_growing_graph_tutorial.py
_downloads/cfc96481b1f24af8beaa2cd33ee5d180/: plot_mlp_run.py
_downloads/cfec1907b23b97e2559c571fb7ac6f83/: plot_growing_module_tutorial.py
_downloads/e11074a616c6f41be8f9d214bdfcdd37/: plot_growing_module_tutorial.ipynb
_static/: documentation_options.js
auto_examples/: index.html  plot_growing_container_tutorial.html  plot_growing_graph_tutorial.html  plot_growing_module_tutorial.html  plot_mlp_run.html  sg_execution_times.html
docs/: Makefile  net2net_support_design.md
docs/source/: README.rst  api.rst  conf.py  growingmodule.rst  index.rst  lineargrowingmodule.rst  tech_notes.rst  tools.rst  whats_new.rst
examples/: README.rst  plot_growing_container_tutorial.py  plot_growing_network.py  plot_linear_module.py  plot_mlp_run.py  plot_tutorial.py
examples/helpers/: auxilliary_functions.py
misc/: auxilliary_functions.py  cifar10_normalization.py  low_rank_linear_regression.ipynb  main_graph_network.py  mlp_mixer_run.py  mlp_mixer_standard_run.py  mlp_run.py  mnist_low_rank_training.ipynb  res_mlp_run.py  residual_mlp_run.py  results.ipynb  schedulers.py  simple_mlp_sin.ipynb  teacher.ipynb  test_theory.ipynb  test_theory_v2.ipynb
scripts/: create_conda_env.sh  create_margaret_conda_env.sh  cuda_version.py  data_transfer_script.sh  margaret_launcher.sh  mlflow_remote_server.sh  mlp_launcher.sh  mlp_launcher_test.sh  mlp_mixer_run.sh  mlp_mixer_standard_run.sh  mlp_run.sh  mlp_run_test.sh  residual_mlp_run.sh  test_conda_env.sh  titanic_launcher.sh
scripts/conda_env/: create_margaret_conda_env.sh  create_titanic_conda_env.sh  test_conda_env.py  test_conda_env.sh
src/gromo/: constant_module.py  conv2d_growing_module.py  growing_block.py  growing_mlp.py  growing_mlp_mixer.py  growing_module.py  growing_network.py  growing_residual_block.py  tools.py  (+5 more)
tech_notes/: growing_module.html  initialization.html  variance_transfer.html
tests/: test_GrowableDAG.py  test_activities_and_gradients.py  test_bn_inception.py  test_conv2d_growing_block.py  test_conv2d_growing_module.py  test_dag_growing_network.py  test_device_management.py  test_dtype_management.py  test_growing_block.py  test_growing_container.py  test_growing_dag.py  test_growing_drop_path.py  test_growing_dropout.py  test_growing_graph_network.py  test_growing_mlp.py  test_growing_mlp_mixer.py  test_growing_module.py  test_growing_normalisation.py  test_growing_residual_block.py  test_growing_residual_mlp.py  test_growing_vision_transformer.py  test_iterative_estimation.py  test_linear_growing_module.py  test_loader.py  test_logger.py  test_net2wider_inception.py  test_net2wider_initializer.py  test_neuron_step.py  test_parameter_step.py  test_resnet_insert_block.py  test_sequential_growing_container.py  test_tensor_statistics.py  test_tools.py  test_training_utils.py  test_utils.py  test_variance_transfer.py  torch_unittest.py  unittest_tools.py
(+47 files in other folders)
